--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -3,10 +3,13 @@
 
   <%= render :partial => "form" %>
   <% if @admin == 1 %>
-  	<h4>Merge Articles</h4>
-  	<div class='editor-left'>
-  		<%= text_field 'article', 'id', {:autocomplete => 'off', :style => 'width: 100%'} %>
-  	</div>
+  	<h4><%= _("Merge Articles")%></h4>
+		<% form_for @article, url: {action: "merge_articles"} do |f| %>
+    	<p>
+      	<%= f.text_field :merge_with, value: 'Article ID' %>
+      	<%= submit_tag 'Merge' %>
+    	</p>
+		<% end %>
   <% end %>
 
 <% end %>
